Modified the docbuild things.

--- a/docbuild/lake-manifest.json
+++ b/docbuild/lake-manifest.json
@@ -13,7 +13,7 @@
    "configFile": "lakefile.lean"},
   {"type": "path",
    "scope": "",
-   "name": "terpsols",
+   "name": "Terpsols",
    "manifestFile": "lake-manifest.json",
    "inherited": false,
    "dir": "../",
