--- a/docbuild/lakefile.toml
+++ b/docbuild/lakefile.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 packagesDir = "../.lake/packages"
 
 [[require]]
-name = "terpsols"
+name = "Terpsols"
 path = "../"
 
 [[require]]
